--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,7 @@
 @import "base/layout";
 @import "base/variables";
 @import "base/mixins";
-@import "base/typography.scss";
+@import "base/typography";
 @import "blocks/fonts";
 @import "blocks/header";
 @import "blocks/menu";
@@ -14,4 +14,5 @@
 @import "blocks/modal";
 @import "blocks/catalog";
 @import "blocks/form";
-@import "blocks/social.scss";
+@import "blocks/social";
+@import "blocks/search";
