--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -1,4 +1,6 @@
 .menu {
+  position: relative;
+
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
@@ -27,9 +29,9 @@
 }
 
 .menu__list-new {
-  @media (min-width: $tablet-width) {
-    display: none;
-  }
+  // @media (min-width: $tablet-width) {
+  //   display: none;
+  // }
 
   @media (min-width: $desktop-width) {
     display: flex;
@@ -49,7 +51,7 @@
 .menu__item {
   width: auto;
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
-  padding: 32px 76px 32px 76px;
+  padding: 32px 60px 32px 76px;
 
   @media (min-width: $tablet-width) {
     align-self: stretch;
@@ -125,7 +127,7 @@
     content: "";
     position: absolute;
     top: 2px;
-    left: 0;
+    left: -40px;
     background: url("../img/icon-cart.svg") no-repeat;
     width: 21px;
     height: 18px;
@@ -134,6 +136,11 @@
 
   @media (min-width: $tablet-width) {
     padding-left: 50px;
+
+    &::before {
+      content: "";
+      left: 0;
+    }
   }
 }
 
@@ -148,6 +155,10 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+
+  @media (max-width: $mobile-width-only) {
+    display: block;
+  }
 }
 
 .menu__line {
@@ -170,5 +181,40 @@
 .logo {
   @media (min-width: $tablet-width) {
     margin-right: auto;
+  }
+}
+
+// Добавляем стили для закрытого меню
+.menu__closed .menu__btn {
+  background: url("");
+}
+
+.menu__closed .menu__list {
+  @media (max-width: $mobile-width-only) {
+    display: none;
+  }
+}
+
+// Добавляем стили для открытого меню
+.menu__opened .menu__btn {
+  background: url("");
+}
+
+.menu__opened .menu__list-search,
+.menu__opened .menu__list-catalog-order {
+  @media (max-width: $mobile-width-only) {
+    display: block;
+  }
+}
+
+// Добавляем стили для кнопки без JS
+.menu__no-js .menu__btn {
+  display: none;
+}
+
+.menu__no-js .menu__list-search,
+.menu__no-js .menu__list-catalog-order {
+  @media (max-width: $mobile-width-only) {
+    display: block;
   }
 }
