--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -22,12 +22,15 @@
 
 .contacts__title {
   position: relative;
-  font-size: 43px;
+  font-size: 18px;
   font-weight: bold;
-  line-height: 1.16;
+  line-height: 1.67;
+  margin-bottom: 26px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 42px;
+    font-size: 43px;
+    line-height: 1.16;
 
     &::after {
       content: "";
@@ -54,7 +57,7 @@
 }
 
 .contacts__info {
-  margin-bottom: 42px;
+  margin-bottom: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -74,6 +77,7 @@
   font-size: 15px;
   line-height: 2;
   color: $color-danger;
+  margin-bottom: 28px;
 }
 
 .contacts__address {
@@ -97,7 +101,7 @@
 }
 
 .contacts__value {
-  padding-right: 16px;
+  padding-right: 28px;
 }
 
 .contacts__field-line {
@@ -107,7 +111,12 @@
 .contacts__map {
   position: relative;
   text-align: center;
-  margin-bottom: 38px;
+  margin-bottom: 30px;
+
+  @media (max-width: $mobile-width-only) {
+    width: 320px;
+    margin-left: -29px;
+  }
 
   @media (min-width: $desktop-width) {
     float: right;
@@ -125,7 +134,7 @@
 .contacts__btn {
   display: block;
   margin: 0 auto;
-  padding: 20px 52px;
+  padding: 14px 52px;
 
   @include button-style;
 
