--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -28,6 +28,9 @@
 }
 
 .form__names {
+  margin-top: 6px;
+  margin-bottom: 26px;
+
   @media (min-width: $tablet-width) {
     width: 500px;
     margin-left: auto;
@@ -37,6 +40,14 @@
     width: 700px;
     margin: 0 auto;
   }
+}
+
+.form__first-name {
+  margin-bottom: 17px;
+}
+
+.form__last-name {
+  margin-bottom: 16px;
 }
 
 .form__first-name,
@@ -62,7 +73,11 @@
 }
 
 .form__wrapper-phone {
-  margin-bottom: 30px;
+  margin-bottom: 26px;
+}
+
+.form__wrapper-email {
+  margin-bottom: 26px;
 }
 
 .form__title-page {
@@ -74,7 +89,7 @@
 }
 
 .form__page-text {
-  padding: 76px 36px 80px 36px;
+  padding: 72px 36px 74px 36px;
   margin: 0;
 
   @include page-title;
@@ -94,7 +109,7 @@
   font-size: 13px;
   color: $color-danger;
   line-height: 1.85;
-  margin: 30px 0;
+  margin: 24px 0 17px 0;
 
   @media (min-width: $tablet-width) {
     font-size: 17px;
@@ -110,6 +125,7 @@
 .form__radio {
   display: flex;
   flex-direction: column;
+  margin-bottom: 38px;
 
   @media (min-width: $tablet-width) {
     width: 500px;
@@ -128,12 +144,13 @@
 
 .form__interior {
   display: flex;
-  margin-bottom: 30px;
+  margin-bottom: 24px;
 }
 
 .form__checkboxes {
   display: flex;
   flex-direction: column;
+  margin-bottom: 32px;
 
   @media (min-width: $tablet-width) {
     justify-content: space-between;
@@ -172,12 +189,29 @@
   line-height: 0.94;
   text-transform: uppercase;
   color: $color-brand;
+  margin: 0 0 35px 0;
 
   @media (min-width: $tablet-width) {
     width: auto;
     align-self: baseline;
     min-width: 60px;
   }
+}
+
+.form__legend-names {
+  margin: 0 0 18px 0;
+}
+
+.form__legend-phone {
+  margin-bottom: 12px;
+}
+
+.form__legend-email {
+  margin-bottom: 14px;
+}
+
+.form__legend-additionally {
+  margin-bottom: 25px;
 }
 
 .form__legend-line {
@@ -206,7 +240,7 @@
 
 .form__text-indentation {
   &:not(:last-of-type) {
-    margin-bottom: 20px;
+    margin-bottom: 44px;
   }
   padding-left: 60px;
 }
@@ -221,7 +255,7 @@
   width: 100%;
   border: none;
   box-shadow: inset 0 -2px 0 0 #000000;
-  padding: 18px 0 18px 18px;
+  padding: 10px 0 18px 0;
 
   @media (min-width: $tablet-width) {
     width: 500px;
@@ -235,16 +269,10 @@
 }
 
 .form__placeholder-tel {
+  padding: 12px 0 18px 0;
+
   @media (min-width: $tablet-width) {
     margin-bottom: 24px;
-  }
-}
-
-.form__placeholder-mb {
-  margin-bottom: 25px;
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 0;
   }
 }
 
@@ -267,7 +295,7 @@
     font-size: 17px;
     line-height: 1.26;
     color: $color-danger;
-    padding: 15px 55px 0 16px;
+    padding: 12px 55px 0 14px;
   }
   width: 100%;
   height: 140px;
@@ -306,8 +334,8 @@
 }
 
 .form__btn {
-  margin-top: 30px;
-  padding: 20px 45px;
+  margin-top: 26px;
+  padding: 14px 45px;
 
   @include button-style;
 
