--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,5 +1,5 @@
 .reviews {
-  margin-bottom: 45px;
+  margin-bottom: 85px;
 }
 
 .reviews__wrapper {
@@ -34,7 +34,7 @@
 }
 
 .reviews__title {
-  margin-bottom: 38px;
+  margin-bottom: 22px;
 
   @media (min-width: $tablet-width) {
     align-self: center;
@@ -53,7 +53,7 @@
   font-size: 15px;
   line-height: 2;
   color: $color-danger;
-  margin: 0 0 40px 0;
+  margin: 0 0 28px 0;
 
   @media (min-width: $tablet-width) {
     width: 645px;
@@ -72,7 +72,7 @@
   font-size: 17px;
   font-weight: bold;
   line-height: 1.41;
-  margin: 0;
+  margin: 0 0 5px 0;
 }
 
 .reviews__account {
@@ -84,9 +84,12 @@
   margin: 0;
 }
 
-.reviews__user,
+.reviews__user {
+  margin-bottom: 28px;
+}
+
 .reviews__slide {
-  margin-bottom: 38px;
+  margin-bottom: 40px;
 }
 
 .reviews__slider {
@@ -117,7 +120,7 @@
 }
 
 .reviews__write-btn {
-  padding: 20px 80px;
+  padding: 14px 80px;
 
   @include button-style;
 
