--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -5,12 +5,12 @@
   @media (min-width: $tablet-width) {
     background: url("../img/hero-tablet@1x.jpg") no-repeat center top rgb(249, 249, 249);
     box-shadow: inset 0 -1px 0 1px #f9f9f9, inset 0 0 0 1px rgba(68, 68, 68, 0.2);
-    margin-top: -50px;
+    margin-top: -43px;
+    margin-bottom: 38px;
   }
 
   @media (min-width: $desktop-width) {
     background: url("../img/hero-desktop@1x.jpg") no-repeat center top rgb(249, 249, 249);
-    margin-top: -50px;
     margin-bottom: 140px;
   }
 }
@@ -68,6 +68,8 @@
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
+    line-height: 1.5;
+    padding: 25px 0 40px 0;
   }
 
   @media (min-width: $desktop-width) {
